# shell_to_docker

./: LICENSE  README.md  main.py  pyproject.toml
docs/: project_struct.md
